--- a/CommuForum.html
+++ b/CommuForum.html
@@ -18,9 +18,9 @@
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="about.html">About Us</a></li>
-			<li><a href="ideas.html">Submit Your Idea</a></li>
-			<li><a href="jobs.html">Startup Jobs</a></li>
-			<li class="active"><a href="forum.html">Community Forum</a></li>
+			<li><a href="ideafeedpage.html">Submit Your Idea</a></li>
+			<li><a href="startupjobs.html">Startup Jobs</a></li>
+			<li class="active"><a href="CommuForum.html">Community Forum</a></li>
 		</ul>
 	</nav>
 
