modified:   UserLoginPg.html 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 }
                 
                 /*responsive*/
-                @media(max-width: 767px){
+                /* @media(max-width: 767px){
                   .footer-col{
                     width: 50%;
                     margin-bottom: 30px;
@@ -242,7 +242,7 @@
                 
                 .vaim{
         font-family: 'Poppins', sans-serif;
-    }
+    } */
                 </style>
             <!--h1><a href="index.html"><img src="images/logo.png"/></a></h1-->
             <header>
@@ -367,7 +367,7 @@
                         </a>
                         <ul class="dropdown-menu pull-right" role="menu">
                             <li>
-                                <a href="#">My Account</a>
+                                <a href="UserLoginPg.html">SignUp/Login</a>
                             </li>
                             <li>
                                 <a href="#">Checkout</a>
@@ -889,6 +889,27 @@
 			</div>
 		</section>
 
+        <section class="clients">
+			<div class="container">
+				<div class="row sub_content">
+					<div class="col-lg-12 col-md-12 col-sm-12">
+						<div class="dividerHeading">
+							<h4><span>Our Team Members</span></h4>
+						</div>
+
+						<div class="our_clients">
+							<ul class="row client_items clearfix">
+								<li class="col-md-3 col-sm-6"><a href="services.html"  data-placement="bottom" data-toggle="tooltip" title="Member 1" ><img src="#" alt="" /></a></li>
+								<li class="col-md-3 col-sm-6"><a href="services.html" data-placement="bottom" data-toggle="tooltip" title="Member 2" ><img src="#" alt="" /></a></li>
+								<li class="col-md-3 col-sm-6"><a href="services.html" data-placement="bottom" data-toggle="tooltip" title="Member 3" ><img src="#" alt="" /></a></li>
+								<li class="col-md-3 col-sm-6"><a href="services.html" data-placement="bottom" data-toggle="tooltip" title="Member 4" ><img src="#" alt="" /></a></li>
+							</ul><!--/ .client_items-->
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
         <section class="promo_box wow bounce">
             <div class="container">
                 <div class="row">
@@ -984,7 +1005,7 @@
 		<div class="container">
 			<div class="row">
                 <div class="col-sm-6">
-                    <p class="copyright">&copy; Copyright 2020 | Powered by  <a href="#">Ritik</a></p>
+                    <p class="copyright">&copy; Copyright 2020 | Powered by  <a href="#">EndlessMind</a></p>
                 </div>
 
                 <div class="col-sm-6 ">
@@ -1025,6 +1046,6 @@
             // WOW Animation
             new WOW().init();
         </script>
-    <![endif]-->
+    <!--[endif]-->
 </body>
 </html>
