--- a/startupjobs.html
+++ b/startupjobs.html
@@ -124,6 +124,67 @@
 						list-style: none;
 					}
 
+					.footer{
+                    background-color: #24262b;
+                    padding: 70px 0;
+                }
+                .footer-col{
+                   width: 25%;
+                   padding: 0 15px;
+                }
+                .footer-col h4{
+                    font-size: 18px;
+                    color: #ffffff;
+                    text-transform: capitalize;
+                    margin-bottom: 35px;
+                    font-weight: 500;
+                    position: relative;
+                }
+                .footer-col h4::before{
+                    content: '';
+                    position: absolute;
+                    left:0;
+                    bottom: -10px;
+                    background-color: #e91e63;
+                    height: 2px;
+                    box-sizing: border-box;
+                    width: 50px;
+                }
+                .footer-col ul li:not(:last-child){
+                    margin-bottom: 10px;
+                }
+                .footer-col ul li a{
+                    font-size: 16px;
+                    text-transform: capitalize;
+                    color: #ffffff;
+                    text-decoration: none;
+                    font-weight: 300;
+                    color: #bbbbbb;
+                    display: block;
+                    transition: all 0.3s ease;
+                }
+                .footer-col ul li a:hover{
+                    color: #ffffff;
+                    padding-left: 8px;
+                }
+                .footer-col .social-links a{
+                    display: inline-block;
+                    height: 40px;
+                    width: 40px;
+                    background-color: rgba(255,255,255,0.2);
+                    margin:0 10px 10px 0;
+                    text-align: center;
+                    line-height: 40px;
+                    border-radius: 50%;
+                    color: #ffffff;
+                    transition: all 0.5s ease;
+                }
+                .footer-col .social-links a:hover{
+                    color: #24262b;
+                    background-color: #ffffff;
+                }
+                
+
         .job-list {
   margin-bottom: 20px;
 }
@@ -445,6 +506,123 @@
         </form>
       </div>
       
+	  <!-- Start Footer -->
+	  <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 col-md-3 col-lg-3">
+                    <div class="widget_title">
+                        <h4><span>About Us</span></h4>
+                    </div>
+                    <div class="widget_content">
+                        <p>Donec earum rerum hic tenetur ans sapiente delectus, ut aut reiciendise voluptat maiores alias consequaturs aut perferendis doloribus asperiores.</p>
+                        <ul class="contact-details-alt">
+                            <li><i class="fa fa-map-marker"></i> <p><strong>Address</strong>: #2021 Lorem Ipsum</p></li>
+                            <li><i class="fa fa-user"></i> <p><strong>Phone</strong>:(+91) 9000-12345</p></li>
+                            <li><i class="fa fa-envelope"></i> <p><strong>Email</strong>: <a href="#">mail@example.com</a></p></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3 col-lg-3">
+                    <div class="widget_title">
+                        <h4><span>Recent Posts</span></h4>
+                    </div>
+                    <div class="widget_content">
+                        <ul class="links">
+                            <li> <a href="#">Aenean commodo ligula eget dolor<span>November 07, 2020</span></a></li>
+                            <li> <a href="#">Temporibus autem quibusdam <span>November 05, 2020</span></a></li>
+                            <li> <a href="#">Debitis aut rerum saepe <span>November 03, 2020</span></a></li>
+                            <li> <a href="#">Et voluptates repudiandae <span>November 02, 2020</span></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3 col-lg-3">
+                    <div class="widget_title">
+                        <h4><span>Twitter</span></h4>
+                    </div>
+                    <div class="widget_content">
+                        <ul class="tweet_list">
+                            <li class="tweet_content item">
+                                <p class="tweet_link"><a href="#">@yahooobaba </a> Lorem ipsum dolor et, consectetur adipiscing eli</p>
+                                <span class="time">29 September 2020</span>
+                            </li>
+                            <li class="tweet_content item">
+                                <p class="tweet_link"><a href="#">@yahooobaba </a> Lorem ipsum dolor et, consectetur adipiscing eli</p>
+                                <span class="time">29 September 2020</span>
+                            </li>
+                            <li class="tweet_content item">
+                                <p class="tweet_link"><a href="#">@yahooobaba </a> Lorem ipsum dolor et, consectetur adipiscing eli</p>
+                                <span class="time">29 September 2020</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="widget_content">
+                        <div class="tweet_go"></div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3 col-lg-3">
+                    <div class="widget_title">
+                        <h4><span>Flickr Gallery</span></h4>
+                    </div>
+                    <div class="widget_content">
+                        <div class="flickr">
+                            <ul id="flickrFeed" class="flickr-feed"></ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+	<!--end footer-->
+
+	<section class="footer_bottom">
+		<div class="container">
+			<div class="row">
+                <div class="col-sm-6">
+                    <p class="copyright">&copy; Copyright 2020 | Powered by  <a href="#">EndlessMind</a></p>
+                </div>
+
+                <div class="col-sm-6 ">
+                    <div class="footer_social">
+                        <ul class="footbot_social">
+                            <li><a class="fb" href="#." data-placement="top" data-toggle="tooltip" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                            <li><a class="twtr" href="#." data-placement="top" data-toggle="tooltip" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+                            <li><a class="dribbble" href="#." data-placement="top" data-toggle="tooltip" title="Dribbble"><i class="fa fa-dribbble"></i></a></li>
+                            <li><a class="skype" href="#." data-placement="top" data-toggle="tooltip" title="Skype"><i class="fa fa-skype"></i></a></li>
+                            <li><a class="rss" href="#." data-placement="top" data-toggle="tooltip" title="RSS"><i class="fa fa-rss"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+		</div>
+	</section>
+
+	<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" src="js/popper.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/jquery.easing.1.3.js"></script>
+	<script src="js/retina-1.1.0.min.js"></script>
+
+    <script type="text/javascript" src="js/jquery.smartmenus.min.js"></script>
+    <script type="text/javascript" src="js/jquery.smartmenus.bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/owl.carousel.min.js"></script>
+	<script type="text/javascript" src="js/jflickrfeed.js"></script>
+	<script type="text/javascript" src="js/jquery.magnific-popup.min.js"></script>
+	<script type="text/javascript" src="js/jquery.isotope.min.js"></script>
+	<script type="text/javascript" src="js/swipe.js"></script>
+
+    <script src="js/main.js"></script>
+
+    <!-- WARNING: Wow.js doesn't work in IE 9 or less -->
+    <!--[if gte IE 9 | !IE ]><!-->
+        <script type="text/javascript" src="js/wow.min.js"></script>
+        <script>
+            // WOW Animation
+            new WOW().init();
+        </script>
+    <![endif]-->
+</body>
+</html>
 </body>
 </html>
 
