--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Cover Page</title>
-	<link rel="stylesheet" type="text/css" href="cover.css">
+	<title>EndLess Mind: Digital Incubation Hub</title>
+	<link rel="stylesheet" type="text/css" href="index.css">
     <style>
         body {
 	margin: 0;
