--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ p {
 		<div class="content">
 			<h1>Welcome to EndLess Mind</h1>
             <p>Your go-to destination for startup support and idea incubation</p>
-			<a href="index.html" class="btn">Get Started</a>
+			<a href="cover.html" class="btn">Get Started</a>
 		</div>
 	</div>
 </body>
